--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="wave">
             <div class="container header-container">
-                <h1 class="name">John Doe.</h1>
+                <h1 class="name">Ryan Chapman</h1>
                 <h3 class="subtitle text-center">Building beautiful applications that just work.</h3>
                 <!-- <img src="assets/images/student.png" class="boy" alt="boy image" /> -->
             </div>
@@ -148,12 +148,12 @@
 
                 </div>
                 <div class="timeline-content">
-                    <h2>Project Title 1</h2>
+                    <h2>Plotly & Belly Button Biodiversity</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
                     </p>
-                    <a href="https://github.com" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/BellyButtonBiodiversity" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
                 </div>
             </div>
@@ -164,13 +164,13 @@
 
                 </div>
                 <div class="timeline-content right">
-                    <h2>Project Title 2</h2>
+                    <h2>Citibike with Tableau</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
                         modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
                         ipsa.
                     </p>
-                    <a href="https://github.com" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/Citibike_with_Tableau" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
                 </div>
             </div>
@@ -180,13 +180,13 @@
                     <i class="fas fa-star fa-align"></i>
                 </div>
                 <div class="timeline-content">
-                    <h2>Project Title 3</h2>
+                    <h2>Mission to Mars - Web Scraping with HTML/CSS</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
                         modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
                         ipsa.
                     </p>
-                    <a href="https://github.com" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/Mission-to-Mars" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
 
                 </div>
@@ -198,13 +198,13 @@
 
                 </div>
                 <div class="timeline-content right">
-                    <h2>Project Title 4</h2>
+                    <h2>UFO Sightings with JavaScript</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
                         modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
                         ipsa.
                     </p>
-                    <a href="https://github.com" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/UFOs" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
                 </div>
             </div>
@@ -214,13 +214,13 @@
                     <i class="fas fa-star fa-align"></i>
                 </div>
                 <div class="timeline-content">
-                    <h2>Project Title 5</h2>
+                    <h2>Mapping Earthquakes with JS & APIs</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
                         modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
                         ipsa.
                     </p>
-                    <a href="https://github.com" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/Mapping_Earthquakes" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
                 </div>
             </div>
@@ -232,19 +232,15 @@
     <section class="container education-container">
         <h1 class="title">Education </h1>
         <article class="education-item">
-            <h3 class="subtitle">Vanderbilt University</h3>
-            <span class="text-muted">Full-stack Web Development | Jan 2019 - Jul 2019</span>
+            <h3 class="subtitle">UCB Berkeley Extention</h3>
+            <span class="text-muted">Data Analysis Bootcamp | May 2022 - Nov 2022</span>
         </article>
         <hr />
         <article class="education-item">
-            <h3 class="subtitle">Vanderbilt University</h3>
+            <h3 class="subtitle">Portland State University</h3>
             <span class="text-muted">M.Ed. Higher Education | Aug 2014 - May 2016</span>
         </article>
         <hr />
-        <article class="education-item">
-            <h3 class="subtitle">University of Utah</h3>
-            <span class="text-muted">B.S. Electrical Engineering | Aug 2010 - May 2014</span>
-        </article>
 
 
 
@@ -265,17 +261,16 @@
         <div class="container">
             <h1>Contact Me</h1>
             <h3 class="intro subtitle">
-                <a href="https://twitter.com" class="social-icon"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com/in" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                <a href="jttps://github.com/" class="social-icon"><i class="fab fa-github"></i></a>
-                <a href="mailto:<YOUREMAIL>" class="social-icon"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/rychapma/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/WeirdFishez" class="social-icon"><i class="fab fa-github"></i></a>
+                <a href="mailto:rychapma@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
             </h3>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            John Doe &copy; 2019 - 2020 |
+            Ryan Chapman |
 
         </div>
     </footer>
