--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/app.css" rel="stylesheet" />
-    <title>John Doe | Portfolio</title>
+    <title>Ryan Chapman | Portfolio</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div class="wave">
             <div class="container header-container">
                 <h1 class="name">Ryan Chapman</h1>
-                <h3 class="subtitle text-center">Building beautiful applications that just work.</h3>
+                <h3 class="subtitle text-center"></h3>
                 <!-- <img src="assets/images/student.png" class="boy" alt="boy image" /> -->
             </div>
         </div>
