--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
     <footer>
         <div class="container">
-            Ryan Chapman |
+            Ryan Chapman
 
         </div>
     </footer>
