--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                     <div class="col">
                         <div class="skill-bar-title">
                             <i class="fab fa-html5 fa-3x"></i>
-                            <p>HTML5</p>
+                            <p>SQL</p>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="skill-bar-title">
                             <i class="fab fa-css3-alt fa-3x"></i>
-                            <p>CSS3</p>
+                            <p>Python</p>
                         </div>
                     </div>
                     <div class="col">
@@ -84,13 +84,13 @@
                     <div class="col">
                         <div class="skill-bar-title">
                             <i class="fab fa-node fa-3x"></i>
-                            <p>NodeJS</p>
+                            <p>HTML</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
                             <i class="fab fa-git fa-3x"></i>
-                            <p>Git</p>
+                            <p>Matlab</p>
                         </div>
                     </div>
                 </div>
