--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             up to 1) The sheer quantity of useful data out there in the world 2) How underutilized the tools available
             are to analyze said data. <br> <br>
 
-            Looking for opportunities to diver deeper into the Data Analysis world and learn from the best! </h3>
+            Looking for opportunities to diver deeper into the Data Analysis world and learn from the best!
+        </h3>
     </section>
 
 
@@ -161,13 +162,13 @@
                     <h2>Plotly & Belly Button Biodiversity</h2>
                     <p>
                         • Create basic plots with Plotly, including bar charts, line charts, and pie charts.<br>
-                        • Use D3.json() to fetch external data, such as CSV files and web APIs.
-                        • Parse data in JSON format.
-                        • Use functional programming in JavaScript to manipulate data.
-                        • Use JavaScript's Math library to manipulate numbers.
-                        • Use event handlers in JavaScript to add interactivity to a data visualization.
-                        • How to use interactivity to enhance your visualizations.
-                        Deploy an interactive chart to GitHub Pages.
+                        • Use D3.json() to fetch external data, such as CSV files and web APIs.<br>
+                        • Parse data in JSON format.<br>
+                        • Use functional programming in JavaScript to manipulate data.<br>
+                        • Use JavaScript's Math library to manipulate numbers.<br>
+                        • Use event handlers in JavaScript to add interactivity to a data visualization.<br>
+                        • How to use interactivity to enhance your visualizations.<br>
+                        Deploy an interactive chart to GitHub Pages.<br>
                     </p>
                     <a href="https://github.com/WeirdFishez/BellyButtonBiodiversity" class="btn"><i
                             class="fab fa-github"></i> Code</a>
@@ -183,9 +184,12 @@
                 <div class="timeline-content right">
                     <h2>Citibike with Tableau</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
-                        modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
-                        ipsa.
+
+                        • Import data into Tableau.<br>
+                        • Create and style worksheets, dashboards, and stories in Tableau.<br>
+                        • Use Tableau worksheets to display data in a professional way.<br>
+                        • Portray data accurately using Tableau dashboards.<br>
+
                     </p>
                     <a href="https://github.com/WeirdFishez/Citibike_with_Tableau" class="btn"><i
                             class="fab fa-github"></i> Code</a>
@@ -200,9 +204,15 @@
                 <div class="timeline-content">
                     <h2>Mission to Mars - Web Scraping with HTML/CSS</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
-                        modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
-                        ipsa.
+
+                        • Use HTML elements, as well as class and id attributes, to identify content for web
+                        scraping.<br>
+                        • Use BeautifulSoup and Splinter to automate a web browser and perform a web scrape.<br>
+                        • Create a MongoDB database to store data from the web scrape.<br>
+                        • Create a web application with Flask to display the data from the web scrape.<br>
+                        • Create an HTML/CSS portfolio to showcase projects.<br>
+                        • Use Bootstrap components to polish and customize the portfolio.<br>
+
                     </p>
                     <a href="https://github.com/WeirdFishez/Mission-to-Mars" class="btn"><i class="fab fa-github"></i>
                         Code</a>
@@ -219,9 +229,14 @@
                 <div class="timeline-content right">
                     <h2>UFO Sightings with JavaScript</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
-                        modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
-                        ipsa.
+
+                        •  Explain the strengths and weaknesses of JavaScript "standard" and JavaScript version ES6+.
+                        • Describe JavaScript syntax and ideal use cases.
+                        •  Build and deploy JavaScript functions, including built-in functions.
+                        • Convert JavaScript functions to arrow functions.
+                        •  Build and deploy forEach (JavaScript for loop).
+                        • Create, populate, and dynamically filter a table using JavaScript and HTML
+
                     </p>
                     <a href="https://github.com/WeirdFishez/UFOs" class="btn"><i class="fab fa-github"></i> Code</a>
                     <a href="#" class="btn"><i class="fas fa-tv"></i> Live Demo</a>
