--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/app.css" rel="stylesheet" />
+    <link href="assets/images/app.css" rel="stylesheet" />
     <title>Ryan Chapman | Portfolio</title>
 </head>
 
@@ -229,13 +229,10 @@
                 <div class="timeline-content right">
                     <h2>UFO Sightings with JavaScript</h2>
                     <p>
-
-                        •  Explain the strengths and weaknesses of JavaScript "standard" and JavaScript version ES6+.
-                        • Describe JavaScript syntax and ideal use cases.
-                        •  Build and deploy JavaScript functions, including built-in functions.
-                        • Convert JavaScript functions to arrow functions.
-                        •  Build and deploy forEach (JavaScript for loop).
-                        • Create, populate, and dynamically filter a table using JavaScript and HTML
+                        • Build and deploy JavaScript functions, including built-in functions.<br>
+                        • Convert JavaScript functions to arrow functions.<br>
+                        • Build and deploy forEach (JavaScript for loop).<br>
+                        • Create, populate, and dynamically filter a table using JavaScript and HTML<br>
 
                     </p>
                     <a href="https://github.com/WeirdFishez/UFOs" class="btn"><i class="fab fa-github"></i> Code</a>
@@ -250,9 +247,19 @@
                 <div class="timeline-content">
                     <h2>Mapping Earthquakes with JS & APIs</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam
-                        modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt
-                        ipsa.
+
+                        • Create a branch from the main branch on GitHub.<br>
+                        •  Add, commit, and push data to a GitHub branch.<br>
+                        • Merge a branch with the main branch on GitHub.<br>
+                        •  Retrieve data from a GeoJSON file.<br>
+                        • Make API requests to a server to host geographical maps.<br>
+                        •  Populate geographical maps with GeoJSON data using JavaScript and the Data-Driven Documents (D3)
+                        library.<br>
+                        • Add multiple map layers to geographical maps using Leaflet control plugins to add user interface
+                        controls.<br>
+                        •  Use JavaScript ES6 functions to add GeoJSON data, features, and interactivity to maps.
+                        Render maps on a local server.<br>
+
                     </p>
                     <a href="https://github.com/WeirdFishez/Mapping_Earthquakes" class="btn"><i
                             class="fab fa-github"></i> Code</a>
@@ -273,7 +280,7 @@
         <hr />
         <article class="education-item">
             <h3 class="subtitle">Portland State University</h3>
-            <span class="text-muted">M.Ed. Higher Education | Aug 2014 - May 2016</span>
+            <span class="text-muted"> Bachelor of Science (BS) Supply and Logistics | Sept 2011 - June 2016</span>
         </article>
         <hr />
 
