--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- TIMELINE -->
     <section class="container">
         <h1 class="title">Recent Projects</h1>
-        <h3 class="subtitle">These are just a few of the projects I have collaborated on.</h3>
+        <h3 class="subtitle">These are just a few of the projects I have created in my Data Analysis studies.</h3>
     </section>
 
 
@@ -184,7 +184,6 @@
                 <div class="timeline-content right">
                     <h2>Citibike with Tableau</h2>
                     <p>
-
                         • Import data into Tableau.<br>
                         • Create and style worksheets, dashboards, and stories in Tableau.<br>
                         • Use Tableau worksheets to display data in a professional way.<br>
@@ -293,8 +292,7 @@
         <div class="container">
             <h1 class="title">I'm available for work.
             </h1>
-            <h3 class="subtitle">Actively contributing to new projects and seeking a full-time role in a fast-paced,
-                agile environment. Get in touch!</h3>
+            <h3 class="subtitle">Actively contributing to new projects and seeking a full-time role where I can learn from the best. Get in touch!</h3>
         </div>
     </section>
 
