--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container header-container">
                 <h1 class="name">Ryan Chapman</h1>
                 <h3 class="subtitle text-center"></h3>
-                <!-- <img src="assets/images/me.png" class="boy" alt="boy image" /> -->
+                <img src="assets/images/me.png" class="boy" alt="boy image" />
             </div>
         </div>
         <div class="wave-svg">
@@ -184,6 +184,7 @@
                 <div class="timeline-content right">
                     <h2>Citibike with Tableau</h2>
                     <p>
+
                         • Import data into Tableau.<br>
                         • Create and style worksheets, dashboards, and stories in Tableau.<br>
                         • Use Tableau worksheets to display data in a professional way.<br>
@@ -292,7 +293,8 @@
         <div class="container">
             <h1 class="title">I'm available for work.
             </h1>
-            <h3 class="subtitle">Actively contributing to new projects and seeking a full-time role where I can learn from the best. Get in touch!</h3>
+            <h3 class="subtitle">Actively contributing to new projects and seeking a full-time role in a fast-paced,
+                agile environment. Get in touch!</h3>
         </div>
     </section>
 
