--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- TIMELINE -->
     <section class="container">
         <h1 class="title">Recent Projects</h1>
-        <h3 class="subtitle">These are just a few of the projects I have created in my Data Analysis studies.</h3>
+        <h3 class="subtitle">These are just a few of the projects I have collaborated on.</h3>
     </section>
 
 
@@ -229,10 +229,10 @@
                 <div class="timeline-content right">
                     <h2>UFO Sightings with JavaScript</h2>
                     <p>
-                        • Build and deploy JavaScript functions, including built-in functions.<br>
-                        • Convert JavaScript functions to arrow functions.<br>
-                        • Build and deploy forEach (JavaScript for loop).<br>
-                        • Create, populate, and dynamically filter a table using JavaScript and HTML<br>
+                        • Build and deploy JavaScript functions, including built-in functions.
+                        • Convert JavaScript functions to arrow functions.
+                        • Build and deploy forEach (JavaScript for loop).
+                        • Create, populate, and dynamically filter a table using JavaScript and HTML
 
                     </p>
                     <a href="https://github.com/WeirdFishez/UFOs" class="btn"><i class="fab fa-github"></i> Code</a>
@@ -248,17 +248,17 @@
                     <h2>Mapping Earthquakes with JS & APIs</h2>
                     <p>
 
-                        • Create a branch from the main branch on GitHub.<br>
-                        •  Add, commit, and push data to a GitHub branch.<br>
-                        • Merge a branch with the main branch on GitHub.<br>
-                        •  Retrieve data from a GeoJSON file.<br>
-                        • Make API requests to a server to host geographical maps.<br>
+                        • Create a branch from the main branch on GitHub.
+                        •  Add, commit, and push data to a GitHub branch.
+                        • Merge a branch with the main branch on GitHub.
+                        •  Retrieve data from a GeoJSON file.
+                        • Make API requests to a server to host geographical maps.
                         •  Populate geographical maps with GeoJSON data using JavaScript and the Data-Driven Documents (D3)
-                        library.<br>
+                        library.
                         • Add multiple map layers to geographical maps using Leaflet control plugins to add user interface
-                        controls.<br>
+                        controls.
                         •  Use JavaScript ES6 functions to add GeoJSON data, features, and interactivity to maps.
-                        Render maps on a local server.<br>
+                        Render maps on a local server.
 
                     </p>
                     <a href="https://github.com/WeirdFishez/Mapping_Earthquakes" class="btn"><i
@@ -280,7 +280,7 @@
         <hr />
         <article class="education-item">
             <h3 class="subtitle">Portland State University</h3>
-            <span class="text-muted"> Bachelor of Science (BS) Supply and Logistics | Sept 2011 - June 2016</span>
+            <span class="text-muted">M.Ed. Higher Education | Aug 2014 - May 2016</span>
         </article>
         <hr />
 
