--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
-    <link href="assets/images/app.css" rel="stylesheet" />
+    <link href="assets/css/app.css" rel="stylesheet" />
     <title>Ryan Chapman | Portfolio</title>
 </head>
 
@@ -30,7 +30,7 @@
             <div class="container header-container">
                 <h1 class="name">Ryan Chapman</h1>
                 <h3 class="subtitle text-center"></h3>
-<!--                 <img src="assets/images/me.png" class="boy" alt="boy image" /> -->
+                <img src="assets/images/me.png" class="boy" alt="boy image" />
             </div>
         </div>
         <div class="wave-svg">
