--- a/index.html
+++ b/index.html
@@ -293,3 +293,46 @@
             </h1>
             <h3 class="subtitle">Actively contributing to new projects and seeking a full-time role to
                 learn from the best!
+                 </div>
+                    </section>
+
+                    <!-- FOOTER -->
+                    <section class="container-dark">
+                        <div class="container">
+                            <h1>Contact Me</h1>
+                            <h3 class="intro subtitle">
+                                <a href="https://www.linkedin.com/in/rychapma/" class="social-icon"><i
+                                        class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/WeirdFishez" class="social-icon"><i
+                                        class="fab fa-github"></i></a>
+                                <a href="mailto:rychapma@gmail.com" class="social-icon"><i
+                                        class="fas fa-envelope"></i></a>
+                            </h3>
+                        </div>
+                    </section>
+
+                    <footer>
+                        <div class="container">
+                            Ryan Chapman
+
+                        </div>
+                    </footer>
+
+
+                    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+                        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+                        crossorigin="anonymous"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+                        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+                        crossorigin="anonymous"></script>
+                    <script src="assets/js/app.js"></script>
+                </body>
+
+                </html>t. Get in touch!
+            </h3>
+        </div>
+    </section>
+                
