--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <script src="assets/js/app.js"></script>
                 </body>
 
-                </html>t. Get in touch!
+                </html>Get in touch!
             </h3>
         </div>
     </section>
