--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container header-container">
                 <h1 class="name">Ryan Chapman</h1>
                 <h3 class="subtitle text-center"></h3>
-                <img src="assets/images/me.png" class="boy" alt="boy image" />
+                <img src="images/me.png" class="boy" alt="boy image" />
             </div>
         </div>
         <div class="wave-svg">
