--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <hr />
         <article class="education-item">
             <h3 class="subtitle">Portland State University</h3>
-            <span class="text-muted">M.Ed. Higher Education | Sept 2011 - June 2016</span>
+            <span class="text-muted">Bachelor of Science (BS), Supply and Logistics | Sept 2011 - June 2016</span>
         </article>
         <hr />
 
