--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row text-center">
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-html5 fa-3x"></i>
+                            <i class=""></i>
                             <p>SQL</p>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-js-square fa-3x"></i>
+                            <i class="fab fa-html5 fa-3x"></i>
                             <p>JavaScript</p>
                         </div>
                     </div>
