--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row text-center">
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-cloud fa-3x"></i>
+                            <i class="fa fa-cloud fa-3x"></i>
                             <p>SQL</p>
                         </div>
                     </div>
