--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-css3-alt fa-3x"></i>
+                            <i class="fab fa-python fa-3x"></i>
                             <p>Python</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-html5 fa-3x"></i>
-                            <p>JavaScript</p>
+                            <i class="fab fa-node-js"></i>
+                            <p>Node JS</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-node fa-3x"></i>
+                            <i class="fab fa-html5 fa-3x"></i>
                             <p>HTML</p>
                         </div>
                     </div>
