--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-node-js"></i>
+                            <i class="fab fa-node-js fa-3x"></i>
                             <p>Node JS</p>
                         </div>
                     </div>
@@ -131,10 +131,16 @@
                     himenaeos. Vestibulum elementum fringilla lectus, ac condimentum mauris. Mauris vel tellus id tellus
                     accumsan convallis sed sed elit. </p>
                 <h5 class="card-title">
+                    Programming Languages I use:
+                </h5>
+                <p class="card-text">
+                    Visual Basic for Applications (advanced), JavaScript (intermediate), Python (intermediate), CSS (intermediate), HTML5 (intermediate), R (beginner).
+                <h5 class="card-title">
                     Technologies I use:
                 </h5>
                 <p class="card-text">
-                    HTML5, CSS3, Git, Bootstrap, JavaScript
+                    Tableau, SQL Database, SQLAlchemy, SQLite, NoSQL, Visual Basic for Applications (VBA), MySQL, MATLAB, Matplotlib, 
+Pandas (Software), Microsoft Office, PowerPoint, Word.
                 </p>
             </div>
         </div>
