--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-area-chart fa-3x"></i>
+                            <i class="fa fa-area-chart fa-3x"></i>
                             <p>Matlab</p>
                         </div>
                     </div>
