--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
                     <i class="fas fa-code"></i>
                 </span>
 
-                <h3 class="card-title">More about Me</h3>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas scelerisque
-                    viverra vestibulum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    himenaeos. Vestibulum elementum fringilla lectus, ac condimentum mauris. Mauris vel tellus id tellus
-                    accumsan convallis sed sed elit. </p>
+                <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title">
-                    Programming Languages I use:
+                    Leaderships Skills:
+                </h5>
+                <p class="card-text">5S; C.P.R.; Communication; Continuous Improvement; Data Analytics & Visualization; Forecasting, Gemba Kaizen, Interpersonal Skills; Leadership; Machine Learning; Problem Solving; Risk Management; Strategic Planning; Project Management; Human Resource Partner; Team Management. </p>
+                <h5 class="card-title">
+                    Programming Languages:
                 </h5>
                 <p class="card-text">
                     Visual Basic for Applications (advanced), JavaScript (intermediate), Python (intermediate), CSS (intermediate), HTML5 (intermediate), R (beginner).
                 <h5 class="card-title">
-                    Technologies I use:
+                    Technologies:
                 </h5>
                 <p class="card-text">
                     Tableau, SQL Database, SQLAlchemy, SQLite, NoSQL, Visual Basic for Applications (VBA), MySQL, MATLAB, Matplotlib, 
