--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                 <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title">
-                    Leaderships Skills:
+                    Leadership:
                 </h5>
                 <p class="card-text">5S; C.P.R.; Communication; Continuous Improvement; Data Analytics & Visualization; Forecasting, Gemba Kaizen, Interpersonal Skills; Leadership; Machine Learning; Problem Solving; Risk Management; Strategic Planning; Project Management; Human Resource Partner; Team Management. </p>
                 <h5 class="card-title">
