--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
                 <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title">
-                    Leadership:
+                    General:
                 </h5>
-                <p class="card-text">5S; C.P.R.; Communication; Continuous Improvement; Data Analytics & Visualization; Forecasting, Gemba Kaizen, Interpersonal Skills; Leadership; Machine Learning; Problem Solving; Risk Management; Strategic Planning; Project Management; Human Resource Partner; Team Management. </p>
+                <p class="card-text">5S; C.P.R.; Professional Communication; Continuous Improvement; Forecasting, Gemba Kaizen, Interpersonal Skills; Leadership; Problem Solving; Risk Management; Strategic Planning; Project Management; Human Resource Partner; Team Management. </p>
                 <h5 class="card-title">
                     Programming Languages:
                 </h5>
@@ -140,7 +140,7 @@
                 </h5>
                 <p class="card-text">
                     Tableau, SQL Database, SQLAlchemy, SQLite, NoSQL, Visual Basic for Applications (VBA), MySQL, MATLAB, Matplotlib, 
-Pandas (Software), Microsoft Office, PowerPoint, Word.
+Pandas (Software), Microsoft Office, PowerPoint, Machine Learning;
                 </p>
             </div>
         </div>
