--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Pandas (Software), Microsoft Office, PowerPoint, Machine Learning;
                     </p>
                     <a href="https://github.com/WeirdFishez/BellyButtonBiodiversity" class="btn"><i
                             class="fab fa-github"></i> Code</a>
-                    <a href="" class="btn" title="Still working on this!"><i class="fas fa-tv"></i> Live Demo</a>
+                    <a href="https://weirdfishez.github.io/bellybutton" class="btn" title="Still working on this!"><i class="fas fa-tv"></i> Live Demo</a>
                 </div>
             </div>
 
