--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3 class="subtitle">
             I have 6 years of experience working in the supply chain management and KPI data analysis world. My most
             recent title was delivery operations manager at Amazon Logistics, where I lead a cross-functional team of 5
-            supervisory managers responsible for overseeing over 10,000sq/mi of AMZL last mile delivery service area.
+            supervisory managers responsible for overseeing more than 10,000sq/mi of AMZL last mile delivery service area.
             <br><br>
 
             Our team's main focus was analyzing KPIs and creating/enacting best-in-class solutions to ensure customer
