--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Pandas (Software), Microsoft Office, PowerPoint, Machine Learning;
                     <script src="assets/js/app.js"></script>
                 </body>
 
-                </html>Get in touch!
+                </html>
             </h3>
         </div>
     </section>
