--- a/index.html
+++ b/index.html
@@ -123,18 +123,17 @@
                 <h5 class="card-title">
                     General:
                 </h5>
-                <p class="card-text">5S; C.P.R.; Professional Communication; Continuous Improvement; Forecasting, Gemba Kaizen, Interpersonal Skills; Leadership; Problem Solving; Risk Management; Strategic Planning; Project Management; Human Resource Partner; Team Management. </p>
+                <p class="card-text">5S - C.P.R. - Communication - Continuous Improvement - Data Analytics & Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management - Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
                 <h5 class="card-title">
                     Programming Languages:
                 </h5>
                 <p class="card-text">
-                    Visual Basic for Applications (advanced), JavaScript (intermediate), Python (intermediate), CSS (intermediate), HTML5 (intermediate), R (beginner).
+                    Visual Basic for Applications (advanced) - JavaScript (intermediate) - Python (intermediate) – (beginner) - R (beginner)
                 <h5 class="card-title">
                     Technologies:
                 </h5>
                 <p class="card-text">
-                    Tableau, SQL Database, SQLAlchemy, SQLite, NoSQL, Visual Basic for Applications (VBA), MySQL, MATLAB, Matplotlib, 
-Pandas (Software), Microsoft Office, PowerPoint, Machine Learning;
+                    APIs - AWS - D3.js - Deep Learning - GeoJSON - Hadoop - Leaflet - MySQL - MATLAB - Matplotlib - Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark - Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
                 </p>
             </div>
         </div>
