--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
 
     <div class="wave-svg-color">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="#265C7E" opacity="1" width="100%" height="80"
+        <svg xmlns="http://www.w3.org/2000/svg" fill="#0C7FAC" opacity="1" width="100%" height="80"
             preserveAspectRatio="none" viewBox="0 0 1600 200">
             <path d="M-8,95.3C-8,95.3,189,2,398,2s604,184.7,800,184.7s412-91.4,412-91.4V271H-8V95.3z" />
             <path
