--- a/index.html
+++ b/index.html
@@ -47,20 +47,12 @@
         <h1 class="title">Thanks for stopping by!
         </h1>
         <h3 class="subtitle">
-            I have 6 years of experience working in the supply chain management and KPI data analysis world. My most
-            recent title was delivery operations manager at Amazon Logistics, where I lead a cross-functional team of 5
-            supervisory managers responsible for overseeing more than 10,000sq/mi of AMZL last mile delivery service area.
-            <br><br>
+            Supply chain manager with 6 years' experience in various roles across Amazon fulfillment & logistics. 
+            Most recent title was L6 Delivery Operations Manager leading a cross-functional team of 5 supervisory managers responsible for overseeing over 10,000sq/mi of AMZL last mile delivery service area. 
 
-            Our team's main focus was analyzing KPIs and creating/enacting best-in-class solutions to ensure customer
-            satisfaction. This was accomplished by bridging the gap between 3rd party delivery service providers and the
-            various AMZL planning, quality, corporate, and Sr. Leadership sides of house! <br> <br>
+            My time at Amazon gave me a great introduction to how impactful data can be if read and presented appropriately. 
+            As I developed my skills and dove deeper into the field, I began to realize that A) Excel can only get you so far, and B) There are way more powerful tools out there. I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley. I'm currently looking for a role in the Data Analysis world that would support my continued development and help me learn from the best!
 
-            I'm currently returning to school to study Data Analytics until November. My role at Amazon opened my eyes
-            up to 1) The sheer quantity of useful data out there in the world 2) How underutilized the tools available
-            are to analyze said data. <br> <br>
-
-            Looking for opportunities to diver deeper into the Data Analysis world and learn from the best!
         </h3>
     </section>
 
