--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     <p>
                         • Connect to US Federal Spending API and pull specified data in JSON format.<br>
                         • Request all Federally awarded contracts from 2017-2021.<br>
-                        • Filter request by Industrial Classification System (ICS) code 21: Mining, Quarrying, and Oil and Gas Extraction.<br>
-                        • Pull historic raw material indicies from World Trade Organization (WTO)<br>
+                        • Filter request by 'Energy' contracts.<br>
+                        • Pull historic raw material indicies from the World Bank<br>
                         • Use Pandas & Python to format and clean data. <br>
                         • Create visualizations of historic data with Tableau.<br>
                         • Utilize machine learning to identify which factors might have the most impact on energy prices.<br>
