--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
 
                 <h3 class="card-title">My Skillsets</h3>
                 <h5 class="card-title">
-                    General:
+                    General
                 </h5>
                 <p class="card-text">5S - C.P.R. - Communication - Continuous Improvement - Data Analytics & Visualization - Forecasting - Gemba Kaizen - De-escalation - Problem Solving - Risk Management - Strategic Planning - Project Management - Human Resource Partner - Team Management </p>
                 <h5 class="card-title">
-                    Programming Languages:
+                    Programming Languages
                 </h5>
                 <p class="card-text">
                     Visual Basic for Applications (advanced) - JavaScript (intermediate) - Python (intermediate) – (beginner) - R (beginner)
                 <h5 class="card-title">
-                    Technologies:
+                    Technologies
                 </h5>
                 <p class="card-text">
                     APIs - AWS - D3.js - Deep Learning - GeoJSON - Hadoop - Leaflet - MySQL - MATLAB - Matplotlib - Machine Learning- NoSQL – ORMs - Pandas - Plotly - SQL Database - SQLAlchemy – SQLite - Spark - Scikit-learn - Tableau - TensorFlow - Web Scraping - Web Visualization
