--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container header-container">
                 <h1 class="name">Ryan Chapman's Portfolio</h1>
                 <h3 class="subtitle text-center"></h3>
-                <img src="images/me.png" class="boy"/>
+                <img src="images/Me.png" class="boy"/>
             </div>
         </div>
         <div class="wave-svg">
