--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             My time at Amazon gave me a great introduction to how impactful data can be if read and presented appropriately. 
             As I developed my skills and dove deeper into the field, I began to realize that A) Excel can only get you so far, and B) There are way more powerful tools out there.
-            <br> I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley. I'm currently looking for a role in the Data Analysis world that would support my continued development and help me learn from the best!
+            <br><br> I left Amazon to learn these skills by attending a 24-week Data Bootcamp provided by UC Berkeley. I'm currently looking for a role in the Data Analysis world that would support my continued development and help me learn from the best!
 
         </h3>
     </section>
