--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     Programming Languages
                 </h5>
                 <p class="card-text">
-                    Visual Basic for Applications (advanced) - JavaScript (intermediate) - Python (intermediate) – (beginner) - R (beginner)
+                    Visual Basic for Applications (advanced) - JavaScript (intermediate) - Python (intermediate) - R (beginner)
                 <h5 class="card-title">
                     Technologies
                 </h5>
