--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <section class="container education-container">
         <h1 class="title">Education </h1>
         <article class="education-item">
-            <h3 class="subtitle">UCB Berkeley Extention</h3>
+            <h3 class="subtitle">UC Berkeley Extention</h3>
             <span class="text-muted">Data Analysis Bootcamp | May 2022 - Nov 2022</span>
         </article>
         <hr />
