--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
-                            <i class="fab fa-node-js fa-3x"></i>
-                            <p>Node JS</p>
+                            <i class="fab fa-microsoft fa-3x"></i>
+                            <p>VBA</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="skill-bar-title">
                             <i class="fab fa-html5 fa-3x"></i>
-                            <p>HTML</p>
+                            <p>HTML/CSS</p>
                         </div>
                     </div>
                 </div>
