--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </section>
 
     <div class="wave-svg-color">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="#0C7FAC" opacity="1" width="100%" height="80"
+        <svg xmlns="http://www.w3.org/2000/svg" fill="#0B514D" opacity="1" width="100%" height="80"
             preserveAspectRatio="none" viewBox="0 0 1600 200">
             <path d="M-8,95.3C-8,95.3,189,2,398,2s604,184.7,800,184.7s412-91.4,412-91.4V271H-8V95.3z" />
             <path
@@ -192,7 +192,7 @@
                     <i class="fas fa-star fa-align"></i>
                 </div>
                 <div class="timeline-content">
-                    <h2>Mission to Mars - Web Scraping with HTML/CSS</h2>
+                    <h2>Mission to Mars<br>Web Scraping with HTML/CSS</h2>
                     <p>
                         • Use HTML elements, as well as class and id attributes, to identify content for web
                         scraping.<br>
