--- a/index.html
+++ b/index.html
@@ -151,15 +151,14 @@
 
                 </div>
                 <div class="timeline-content">
-                    <h2>US Government Contract Spending Impact on Energy Indices</h2>
+                    <h2>US Government Contract Spending</h2>
                     <p>
-                        • Connect to US Federal Spending API and pull specified data in JSON format.<br>
-                        • Request all Federally awarded contracts from 2017-2021.<br>
-                        • Filter request by 'Energy' contracts.<br>
-                        • Pull historic raw material indicies from the World Bank<br>
-                        • Use Pandas & Python to format and clean data. <br>
-                        • Create visualizations of historic data with Tableau.<br>
-                        • Utilize machine learning to identify which factors might have the most impact on energy prices.<br>
+                        • Exploratory analysis of The United States Federal Government energy contract spending's impact on the price of US Natural Gas.<br>  
+                        • 2017-2021 contract data pulled from US Federal Spending API in JSON format.<br>
+                        • Historical Commodity prices pulled from World Bank Group 'Pink Sheet'.<br>
+                        • Pandas & Python used to format, clean, and combine data. <br>
+                        • Tableau used to visualize 'Energy' contract amounts by Awarding Agency, Awarded Company, Industry Code, and Product/Service code.<br>
+                        • Machine learning to identify which factors might have the most impact on US Natural Gas Prices.<br>
                     </p>
                     <a href="https://github.com/WeirdFishez/Federal_Energy_Contract_Spending" class="btn"><i
                             class="fab fa-github"></i> Code</a>
@@ -173,15 +172,15 @@
 
                 </div>
                 <div class="timeline-content right">
-                    <h2>Citibike with Tableau</h2>
+                    <h2>Crypto Currencies Analysis</h2>
                     <p>
-                        • Import data into Tableau.<br>
-                        • Create and style worksheets, dashboards, and stories in Tableau.<br>
-                        • Use Tableau worksheets to display data in a professional way.<br>
-                        • Portray data accurately using Tableau dashboards.<br>
+                        • Unsupervized machine learning to help group and identify coin trends.<br>
+                        • Encode and scale data to prep data for models.<br>
+                        • Cluster data using K-means algorithm.<br>
+                        • PCA used to limit features and speed up model.<br>
 
                     </p>
-                    <a href="https://github.com/WeirdFishez/Citibike_with_Tableau" class="btn"><i
+                    <a href="https://github.com/WeirdFishez/Cryptocurrencies" class="btn"><i
                             class="fab fa-github"></i> Code</a>
                     
                 </div>
@@ -194,13 +193,10 @@
                 <div class="timeline-content">
                     <h2>Mission to Mars<br>Web Scraping with HTML/CSS</h2>
                     <p>
-                        • Use HTML elements, as well as class and id attributes, to identify content for web
-                        scraping.<br>
-                        • Use BeautifulSoup and Splinter to automate a web browser and perform a web scrape.<br>
-                        • Create a MongoDB database to store data from the web scrape.<br>
-                        • Create a web application with Flask to display the data from the web scrape.<br>
-                        • Create an HTML/CSS portfolio to showcase projects.<br>
-                        • Use Bootstrap components to polish and customize the portfolio.<br>
+                        • HTML elements, as well as class and id attributes, used to identify content for web scraping.<br>
+                        • BeautifulSoup and Splinter used to automate a web browser and perform a web scrape.<br>
+                        • MongoDB database created to store data from the web scrape.<br>
+                        • Web application created using Flask to display the data from the web scrape.<br>
 
                     </p>
                     <a href="https://github.com/WeirdFishez/Mission-to-Mars" class="btn"><i class="fab fa-github"></i>
@@ -216,15 +212,14 @@
 
                 </div>
                 <div class="timeline-content right">
-                    <h2>UFO Sightings with JavaScript</h2>
+                    <h2>Employee Database Analysis</h2>
                     <p>
-                        • Build and deploy JavaScript functions, including built-in functions.<br>
-                        • Convert JavaScript functions to arrow functions.<br>
-                        • Build and deploy forEach (JavaScript for loop). <br>
-                        • Create, populate, and dynamically filter a table using JavaScript and HTML. <br>
+                        • Designed an ERD to apply to the data.<br>
+                        • Database created and data imported using PGAdmin.<br>
+                        • SQL queries to data wrangle.
 
                     </p>
-                    <a href="https://github.com/WeirdFishez/UFOs" class="btn"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://github.com/WeirdFishez/Pewlett_Hackard_analysis" class="btn"><i class="fab fa-github"></i> Code</a>
                     
                 </div>
             </div>
@@ -236,18 +231,14 @@
                 <div class="timeline-content">
                     <h2>Mapping Earthquakes with JS & APIs</h2>
                     <p>
-
-                        • Create a branch from the main branch on GitHub.<br>
-                        • Add, commit, and push data to a GitHub branch.<br>
-                        • Merge a branch with the main branch on GitHub.<br>
-                        • Retrieve data from a GeoJSON file.<br>
-                        • Make API requests to a server to host geographical maps.<br>
-                        • Populate geographical maps with GeoJSON data using JavaScript and the Data-Driven Documents
+                        • Retrieved data from a GeoJSON file.<br>
+                        • API request to a server to host geographical maps.<br>
+                        • Populated geographical maps with GeoJSON data using JavaScript and the Data-Driven Documents
                         (D3) library.<br>
-                        • Add multiple map layers to geographical maps using Leaflet control plugins to add user
+                        • Multiple map layers added to geographical maps using Leaflet control plugins to add user
                         interface controls.<br>
-                        • Use JavaScript ES6 functions to add GeoJSON data, features, and interactivity to maps.
-                        Render maps on a local server.<br>
+                        • JavaScript ES6 functions used to add GeoJSON data, features, and interactivity to maps.<br>
+                        • Render maps on a local server.<br>
 
                     </p>
                     <a href="https://github.com/WeirdFishez/Mapping_Earthquakes" class="btn"><i
