--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="timeline-content right">
                     <h2>Crypto Currencies Analysis</h2>
                     <p>
-                        • Unsupervized machine learning to help group and identify coin trends.<br>
+                        • Unsupervized machine learning used to help group and identify coin trends.<br>
                         • Encode and scale data to prep data for models.<br>
                         • Cluster data using K-means algorithm.<br>
                         • PCA used to limit features and speed up model.<br>
