--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="timeline-content right">
                     <h2>Crypto Currencies Analysis</h2>
                     <p>
-                        • Unsupervized machine learning used to help group and identify coin trends.<br>
+                        • Unsupervized machine learning to help group and identify coin trends.<br>
                         • Encode and scale data to prep data for models.<br>
                         • Cluster data using K-means algorithm.<br>
                         • PCA used to limit features and speed up model.<br>
@@ -193,7 +193,7 @@
                 <div class="timeline-content">
                     <h2>Mission to Mars<br>Web Scraping with HTML/CSS</h2>
                     <p>
-                        • HTML elements, as well as class and id attributes, used to identify content for web scraping.<br>
+                        • HTML elements, as well as class and id attributes, used to identify content for webscraping.<br>
                         • BeautifulSoup and Splinter used to automate a web browser and perform a web scrape.<br>
                         • MongoDB database created to store data from the web scrape.<br>
                         • Web application created using Flask to display the data from the web scrape.<br>
@@ -254,11 +254,13 @@
     <section class="container education-container">
         <h1 class="title">Education </h1>
         <article class="education-item">
+            <img src="images/UCB.svg.png" class="school"/>
             <h3 class="subtitle">UC Berkeley</h3>
             <span class="text-muted">Data Analysis Bootcamp | May 2022 - Nov 2022</span>
         </article>
         <hr />
         <article class="education-item">
+            <img src="images/1200px-Portland_State_Vikings_logo.svg.png" class="school"/>
             <h3 class="subtitle">Portland State University</h3>
             <span class="text-muted">Bachelor of Science (BS), Supply and Logistics | Sept 2011 - June 2016</span>
         </article>
